--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+
 aiofiles==22.1.0
 aiohttp==3.8.5
 aiosignal==1.3.1
@@ -114,7 +115,6 @@ python-json-logger==2.0.7
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
 
-pywinpty==2.0.10
 PyYAML==6.0
 pyzmq==19.0.2
 qtconsole==5.4.2
@@ -161,4 +161,5 @@ y-py==0.5.9
 yarl==1.9.2
 ypy-websocket==0.8.2
 zipp==3.15.0
-pywin32
+pywin32==306
+pywinpty==2.0.10
