--- a/requirements.txt
+++ b/requirements.txt
@@ -116,7 +116,7 @@ pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
 
 PyYAML==6.0
-pyzmq==19.0.2
+pyzmq
 qtconsole==5.4.2
 QtPy==2.3.1
 requests==2.28.2
